Fixed check bias button spacing after <i>

--- a/main.css
+++ b/main.css
@@ -179,7 +179,7 @@ h3 {
   text-align: left;
 }
 
-p i {
+i {
   margin-right: 3px;
 }
 
